# chash

./: Cargo.toml  README.md
src/: hash.rs  hashing.rs  main.rs
