[package]
name = "check_hash"
version = "0.1.0"
authors = ["akida <47895118+Akida31@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.9.1"
sha-1 = "0.9.1"
sha2 = "0.9.1"
digest = "0.9.0"